<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.jdots.tuner.TuneActivity">

    <item
        android:id="@+id/action_back"
        android:icon="@drawable/back_black_24dp"
        android:orderInCategory="10"
        android:title="BACK"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_open"
        android:orderInCategory="100"
        android:title="OPEN"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_save"
        android:orderInCategory="101"
        android:title="SAVE"
        app:showAsAction="always" />




</menu>


